padding for select check, avoid jumping elements

--- a/app/addons/documents/assets/less/header.less
+++ b/app/addons/documents/assets/less/header.less
@@ -26,7 +26,7 @@ button.header-control-box:focus {
 
 .control-toggle-alternative-header {
   .icon {
-    padding: 5px;
+    padding: 0px 8px 0px 0px;
   }
 }
 
